correct font-size

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: 'Ropa Sans', sans-serif;
-  height: 95vh;
+  height: 97vh;
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/modal\ bg\ img.jpg);
   background-position: center;
   background-repeat: no-repeat;
@@ -28,24 +28,22 @@ body {
 
 .show-btn {
     position: fixed;
-    font-size: 22px;
+    font-size: 32px;
     padding: 8px 12px;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     border-radius: 8px;
     transition: all .5s ease-in-out;
 }
 
 .show-btn:hover {
-    background-color: rgba(0, 0, 0, 0.4);
-    box-shadow: 0 0 6px .1px #fff;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal {
     position: fixed;
     max-width: 40%;
     width: 100%;
-    color: #000;
     background-color: rgb(232, 222, 222);
     z-index: 100;
     padding: 20px;
@@ -74,6 +72,7 @@ body {
     right: 0;
     bottom: 0;
     backdrop-filter: blur(3px);
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4))
 }
 
 @media only screen and (max-width: 769px) {
